Changed webpack config, added fonts and plugin for icomoon icons

--- a/client/src/assets/styles/fonts.less
+++ b/client/src/assets/styles/fonts.less
@@ -2,3 +2,4 @@
 @font-face { .font-face('Roboto', 'Roboto-Regular', 400, normal) }
 @font-face { .font-face('Roboto', 'Roboto-Medium', 500, normal) }
 @font-face { .font-face('Roboto', 'Roboto-Bold', 700, normal) }
+@font-face { .font-face('Lato', 'Lato-Bold', 700, normal) }
