--- a/client/src/assets/styles/variables.less
+++ b/client/src/assets/styles/variables.less
@@ -3,6 +3,8 @@
 @line-height-base: 20px;
 @base-font: "Roboto", Arial, Helvetica, sans-serif;
 
+@container-width: 1150px;
+
 // Breakpoints
 @tablet-landscape: 1279px;
 @tablet: 1023px;
