Added font and some styles

--- a/client/src/assets/styles/ant-components.less
+++ b/client/src/assets/styles/ant-components.less
@@ -1,2 +1,3 @@
 // including only those components that are used
 // @import "antd/lib/@name-component/style/index.less"; // Import Ant Design styles by less entry
+@import "~antd/lib/style/index.less"; // Import Ant Design styles by less entry
