--- a/client/src/assets/styles/variables.less
+++ b/client/src/assets/styles/variables.less
@@ -1,10 +1,3 @@
-// Base
-@font-size-base: 16px;
-@line-height-base: 20px;
-@base-font: "Roboto", Arial, Helvetica, sans-serif;
-
-@container-width: 1150px;
-
 // Breakpoints
 @tablet-landscape: 1279px;
 @tablet: 1023px;
@@ -13,3 +6,120 @@
 @mobile: 767px;
 @small-mobile-landscape: 479px;
 @small-mobile: 320px;
+
+
+// colors
+
+@white: #ffffff;
+@beige: #fafafa;
+@gray: #777777;
+@gray-4: #9c9c9c;
+@gray-1: #ebebeb;
+@gray-2: #e1e1e1;
+@gray-5: #444444;
+@gray-6: #959595;
+@black: #000000;
+
+
+
+// heading
+@heading-font: @base-font;
+@heading-font-weight: 300;
+
+@heading-1-size: 30px;
+@heading-2-size: 30px;
+@heading-3-size: 24px;
+@heading-4-size: 20px;
+@heading-5-size: 18px;
+
+
+// Base
+@base-font: "Roboto", Arial, Helvetica, sans-serif;
+@additional-font: "Lato", Arial, Helvetica, sans-serif;
+
+@container-width: 1150px;
+
+
+// -------- Colors -----------
+@primary-color: @blue-6;
+@info-color: @primary-color;
+@success-color: @green-6;
+@processing-color: @blue-6;
+@error-color: @red-5;
+@highlight-color: @red-5;
+@warning-color: @gold-6;
+@normal-color: #d9d9d9;
+
+// Color used by default to control hover and active backgrounds and for
+// alert info backgrounds.
+@primary-1: color(~`colorPalette('@{primary-color}', 1) `); // replace tint(@primary-color, 90%)
+@primary-2: color(~`colorPalette('@{primary-color}', 2) `); // replace tint(@primary-color, 80%)
+@primary-3: color(~`colorPalette('@{primary-color}', 3) `); // unused
+@primary-4: color(~`colorPalette('@{primary-color}', 4) `); // unused
+@primary-5: color(~`colorPalette('@{primary-color}', 5) `); // color used to control the text color in many active and hover states, replace tint(@primary-color, 20%)
+@primary-6: @primary-color; // color used to control the text color of active buttons, don't use, use @primary-color
+@primary-7: color(~`colorPalette('@{primary-color}', 7) `); // replace shade(@primary-color, 5%)
+@primary-8: color(~`colorPalette('@{primary-color}', 8) `); // unused
+@primary-9: color(~`colorPalette('@{primary-color}', 9) `); // unused
+@primary-10: color(~`colorPalette('@{primary-color}', 10) `); // unused
+
+// Base Scaffolding Variables
+// ---
+
+// Background color for `<body>`
+@body-background: @beige;
+@component-background: @beige;
+// Popover background color
+@popover-customize-border-color: @border-color-split;
+@font-family: @base-font;
+@code-family: @additional-font;
+@text-color: @gray;
+@text-color-secondary: @black;
+@text-color-inverse: @white;
+@heading-color: @black;
+@heading-1-size: ceil(@font-size-base * 2.14);
+@heading-2-size: ceil(@font-size-base * 2.14);
+@heading-3-size: ceil(@font-size-base * 1.71);
+@heading-4-size: ceil(@font-size-base * 1.42);
+@heading-5-size: ceil(@font-size-base * 1.28);
+
+@line-height-base: 1.2;
+@border-radius-base: 2px;
+@border-radius-sm: @border-radius-base;
+
+// vertical paddings
+@padding-lg: 24px; // containers
+@padding-md: 16px; // small containers and buttons
+@padding-sm: 12px; // Form controls and items
+@padding-xs: 8px; // small items
+@padding-xss: 4px; // more small
+
+// vertical padding for all form controls
+@control-padding-horizontal: @padding-sm;
+@control-padding-horizontal-sm: @padding-xs;
+
+// vertical margins
+@margin-lg: 24px; // containers
+@margin-md: 16px; // small containers and buttons
+@margin-sm: 12px; // Form controls and items
+@margin-xs: 8px; // small items
+@margin-xss: 4px; // more small
+
+// height rules
+@height-base: 32px;
+@height-lg: 40px;
+@height-sm: 24px;
+
+// The background colors for active and hover states for things like
+// list items or table cells.
+@item-active-bg: @primary-1;
+@item-hover-bg: #f5f5f5;
+
+// ICONFONT
+@iconfont-css-prefix: anticon;
+
+// LINK
+@link-color: @gray;
+@link-hover-color: @black;
+@link-active-color: @black;
+
