--- a/client/src/assets/styles/variables.less
+++ b/client/src/assets/styles/variables.less
@@ -39,38 +39,12 @@
 
 @container-width: 1150px;
 
-
-// -------- Colors -----------
-@primary-color: @blue-6;
-@info-color: @primary-color;
-@success-color: @green-6;
-@processing-color: @blue-6;
-@error-color: @red-5;
-@highlight-color: @red-5;
-@warning-color: @gold-6;
-@normal-color: #d9d9d9;
-
-// Color used by default to control hover and active backgrounds and for
-// alert info backgrounds.
-@primary-1: color(~`colorPalette('@{primary-color}', 1) `); // replace tint(@primary-color, 90%)
-@primary-2: color(~`colorPalette('@{primary-color}', 2) `); // replace tint(@primary-color, 80%)
-@primary-3: color(~`colorPalette('@{primary-color}', 3) `); // unused
-@primary-4: color(~`colorPalette('@{primary-color}', 4) `); // unused
-@primary-5: color(~`colorPalette('@{primary-color}', 5) `); // color used to control the text color in many active and hover states, replace tint(@primary-color, 20%)
-@primary-6: @primary-color; // color used to control the text color of active buttons, don't use, use @primary-color
-@primary-7: color(~`colorPalette('@{primary-color}', 7) `); // replace shade(@primary-color, 5%)
-@primary-8: color(~`colorPalette('@{primary-color}', 8) `); // unused
-@primary-9: color(~`colorPalette('@{primary-color}', 9) `); // unused
-@primary-10: color(~`colorPalette('@{primary-color}', 10) `); // unused
-
-// Base Scaffolding Variables
-// ---
+@font-size-base: 14px;
 
 // Background color for `<body>`
 @body-background: @beige;
 @component-background: @beige;
 // Popover background color
-@popover-customize-border-color: @border-color-split;
 @font-family: @base-font;
 @code-family: @additional-font;
 @text-color: @gray;
@@ -94,10 +68,6 @@
 @padding-xs: 8px; // small items
 @padding-xss: 4px; // more small
 
-// vertical padding for all form controls
-@control-padding-horizontal: @padding-sm;
-@control-padding-horizontal-sm: @padding-xs;
-
 // vertical margins
 @margin-lg: 24px; // containers
 @margin-md: 16px; // small containers and buttons
@@ -109,14 +79,6 @@
 @height-base: 32px;
 @height-lg: 40px;
 @height-sm: 24px;
-
-// The background colors for active and hover states for things like
-// list items or table cells.
-@item-active-bg: @primary-1;
-@item-hover-bg: #f5f5f5;
-
-// ICONFONT
-@iconfont-css-prefix: anticon;
 
 // LINK
 @link-color: @gray;
