[FEATURE] Created Header Public

--- a/client/src/assets/styles/main.less
+++ b/client/src/assets/styles/main.less
@@ -5,3 +5,7 @@
 @import './utils.less';
 @import './shared.less';
 @import './fonts.less';
+@import './components/hamburger.less';
+@import './components/logo.less';
+
+@import './layouts/header.less';
