--- a/client/src/assets/styles/mixins.less
+++ b/client/src/assets/styles/mixins.less
@@ -79,3 +79,9 @@
         @{prop}: @forLessQuery;
     });
 }
+
+.flex-justify-center {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
