--- a/client/src/assets/styles/main.less
+++ b/client/src/assets/styles/main.less
@@ -5,7 +5,10 @@
 @import './utils.less';
 @import './shared.less';
 @import './fonts.less';
-@import './components/hamburger.less';
-@import './components/logo.less';
 
 @import './layouts/header.less';
+@import './layouts/footer.less';
+
+@import './components/logo.less';
+@import './components/hamburger.less';
+@import './components/social-list.less';
