--- a/client/src/assets/styles/main.less
+++ b/client/src/assets/styles/main.less
@@ -5,6 +5,7 @@
 @import './utils.less';
 @import './shared.less';
 @import './fonts.less';
+@import './icons.less';
 
 @import './layouts/header.less';
 @import './layouts/footer.less';
@@ -12,3 +13,5 @@
 @import './components/logo.less';
 @import './components/hamburger.less';
 @import './components/social-list.less';
+@import './components/image.less';
+@import './components/image-banner.less';
