--- a/client/src/assets/styles/mixins.less
+++ b/client/src/assets/styles/mixins.less
@@ -37,13 +37,11 @@
 
 .fill-image-container() {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	min-width: 100%;
+	top: 0;
+	left: 0;
+	width: 100%;
 	min-height: 100%;
 	height: auto;
-	width: auto;
 }
 
 .absolute-centered() {
