--- a/client/src/assets/styles/utils.less
+++ b/client/src/assets/styles/utils.less
@@ -57,13 +57,15 @@
 		}
 	}
 	&--centered {
-		align-items: center;
 		justify-content: center;
 		&-vertically {
 			align-items: center;
 		}
 		&-horizontally {
 			justify-content: center;
+		}
+		&-started {
+			justify-content: flex-start;
 		}
 		&-ended {
 			align-items: flex-end;
