--- a/client/src/assets/styles/variables.less
+++ b/client/src/assets/styles/variables.less
@@ -2,8 +2,8 @@
 @widescreen: 1366px;
 @desktop: 1024px;
 @tablet: 768px;
-@phone: 480px;
-@phone-sm: 320px;
+@mobile: 480px;
+@mobile-sm: 320px;
 
 
 // colors
@@ -105,3 +105,10 @@
 @menu-icon-size: @menu-item-font-size;
 @menu-icon-size-lg: @font-size-lg;
 @menu-item-group-title-font-size: @menu-item-font-size;
+
+// Carousel
+// ---
+@dot-square: 14px;
+@carousel-dot-width: @dot-square;
+@carousel-dot-height: @dot-square;
+@carousel-dot-active-width: @dot-square;
