[FEATURE] Created PersonCard and PersonCardSection components

--- a/client/src/assets/styles/components/image.less
+++ b/client/src/assets/styles/components/image.less
@@ -1,7 +1,18 @@
 .image {
     img {
         width: 100%;
+		height: 100%;
+		object-fit: cover;
     }
+
+	figure {
+		height: 100%;
+	}
+
+	picture {
+		display: block;
+		height: 100%;
+	}
 
     &--wide,
 	&--square {
