--- a/client/src/assets/styles/main.less
+++ b/client/src/assets/styles/main.less
@@ -15,3 +15,6 @@
 @import './components/social-list.less';
 @import './components/image.less';
 @import './components/image-banner.less';
+@import './components/person-card.less';
+
+@import './sections/section-persons.less';
