--- a/client/src/assets/styles/ant-overrides.less
+++ b/client/src/assets/styles/ant-overrides.less
@@ -59,6 +59,10 @@
 }
 
 .ant-typography {
+    strong {
+        font-weight: 700;
+    }
+
     &.image-banner__heading {
         font-size: 48px;
         font-weight: 300;
@@ -174,6 +178,22 @@
         &:before {
             content: "\e909";
             font-family: 'icomoon' !important;
+        }
+    }
+}
+
+.ant-card {
+    &.person-card {
+        .ant-card-meta-title {
+            margin-bottom: 0;
+        }
+
+        .ant-card-body {
+            padding: 31px 35px;
+
+            .breakpoint(@tablet, {
+                padding: 20px 15px;
+            });
         }
     }
 }
