[FEATURE] Created the Progress component

--- a/client/src/assets/styles/main.less
+++ b/client/src/assets/styles/main.less
@@ -16,5 +16,6 @@
 @import './components/image.less';
 @import './components/image-banner.less';
 @import './components/person-card.less';
+@import './components/progress.less';
 
 @import './sections/section-persons.less';
