--- a/client/src/assets/styles/variables.less
+++ b/client/src/assets/styles/variables.less
@@ -12,11 +12,11 @@
 @white: #ffffff;
 @beige: #fafafa;
 @gray: #777777;
-@gray-4: #9c9c9c;
 @gray-1: #ebebeb;
 @gray-2: #e1e1e1;
-@gray-5: #444444;
-@gray-6: #959595;
+@gray-3: #9c9c9c;
+@gray-4: #444444;
+@gray-5: #959595;
 @black: #000000;
 
 
@@ -28,7 +28,7 @@
 
 // Base
 @base-font: "Roboto", Arial, Helvetica, sans-serif;
-@additional-font: "Lato", Arial, Helvetica, sans-serif;
+@secondary-font: "Lato", Arial, Helvetica, sans-serif;
 
 @container-width: 1180px;
 
@@ -67,7 +67,7 @@
 @component-background: @beige;
 // Popover background color
 @font-family: @base-font;
-@code-family: @additional-font;
+@code-family: @secondary-font;
 @text-color: @gray;
 @text-color-secondary: @black;
 @text-color-inverse: @white;
