[FEATURE] Created SkillList, AboutSection components

--- a/client/src/assets/styles/main.less
+++ b/client/src/assets/styles/main.less
@@ -17,5 +17,7 @@
 @import './components/image-banner.less';
 @import './components/person-card.less';
 @import './components/progress.less';
+@import './components/skill.less';
 
 @import './sections/section-persons.less';
+@import './sections/section-about.less';
