--- a/client/src/assets/styles/main.less
+++ b/client/src/assets/styles/main.less
@@ -18,6 +18,7 @@
 @import './components/person-card.less';
 @import './components/progress.less';
 @import './components/skill.less';
+@import './components/blog-card.less';
 
 @import './sections/section-persons.less';
 @import './sections/section-about.less';
